# Patter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md
libraries/python/: .env.example  CLAUDE.md  README.md  pyproject.toml
libraries/python/getpatter/: __init__.py  _public_api.py  _speech_events.py  api_routes.py  banner.py  cli.py  client.py  exceptions.py  local_config.py  models.py  pricing.py  scheduler.py  server.py  stream_handler.py  test_mode.py  tunnel.py
libraries/python/getpatter/audio/: __init__.py  aec.py  background_audio.py  pcm_mixer.py  transcoding.py
libraries/python/getpatter/carriers/: __init__.py  telnyx.py  twilio.py
libraries/python/getpatter/dashboard/: __init__.py  auth.py  export.py  persistence.py  routes.py  store.py  ui.py
libraries/python/getpatter/engines/: __init__.py  elevenlabs.py  openai.py  openai_realtime_2.py
libraries/python/getpatter/evals/: __init__.py  case.py  cli.py  llm_judge.py  runner.py
libraries/python/getpatter/integrations/: __init__.py  patter_tool.py
libraries/python/getpatter/llm/: __init__.py  anthropic.py  cerebras.py  google.py  groq.py  hermes.py  openai.py  openai_compatible.py  openclaw.py
libraries/python/getpatter/observability/: __init__.py  event_bus.py  metric_types.py  tracing.py
libraries/python/getpatter/providers/: __init__.py  anthropic_llm.py  assemblyai_stt.py  base.py  cartesia_stt.py  cartesia_tts.py  cerebras_llm.py  deepfilternet_filter.py  deepgram_stt.py  elevenlabs_convai.py  elevenlabs_tts.py  elevenlabs_ws_tts.py  gemini_live.py  google_llm.py  groq_llm.py  inworld_tts.py  krisp_filter.py  krisp_instance.py  lmnt_tts.py  openai_realtime.py  openai_realtime_2.py  openai_transcribe_stt.py  openai_tts.py  rime_tts.py  silero_onnx.py  silero_vad.py  soniox_stt.py  speechmatics_stt.py  telnyx_adapter.py  telnyx_stt.py  telnyx_tts.py  twilio_adapter.py  ultravox_realtime.py  whisper_stt.py
libraries/python/getpatter/resources/: __init__.py
libraries/python/getpatter/services/: __init__.py  call_log.py  chat_context.py  fallback_provider.py  ivr.py  llm_loop.py  metrics.py  pipeline_hooks.py  remote_message.py  sentence_chunker.py  text_transforms.py
libraries/python/getpatter/stt/: __init__.py  assemblyai.py  cartesia.py  deepgram.py  openai_transcribe.py  soniox.py  speechmatics.py  whisper.py
libraries/python/getpatter/telephony/: __init__.py  common.py  plivo.py  telnyx.py  twilio.py
libraries/python/getpatter/tools/: __init__.py  circuit_breaker.py  consult.py  mcp_client.py  schema_validation.py  tool_decorator.py  tool_executor.py
libraries/python/getpatter/tts/: __init__.py  cartesia.py  elevenlabs.py  elevenlabs_ws.py  inworld.py  lmnt.py  openai.py  rime.py
libraries/python/getpatter/tunnels/: __init__.py
libraries/python/getpatter/utils/: __init__.py  log_sanitize.py  ws.py
libraries/python/tests/: conftest.py  test_agent_realtime_knobs.py  test_api_routes.py  test_client.py  test_consult.py  test_cost_tracking.py  test_dashboard.py  test_dashboard_auth.py  test_dashboard_autotoken.py  test_dashboard_export.py  test_dashboard_sse.py  test_evals.py  test_ivr.py  test_llm_hermes_openclaw_presets.py  test_llm_loop.py  test_llm_loop_call_id_threading.py  test_llm_openai_compatible.py  test_local_mode.py  test_mcp_client.py  test_metrics.py  test_models.py  test_new_agent_features.py  test_new_features.py  test_observability_tracing.py  test_openai_realtime_2_session.py  test_openai_realtime_v1_session.py  test_openclaw_notify.py  test_pricing.py  test_providers.py  test_realtime_154_fixes.py  test_realtime_gate_flag_plumbing.py  test_realtime_preamble_session.py  test_realtime_response_decoupling.py  test_realtime_server_managed_turntaking.py  test_realtime_turn_detection_model.py  test_reassurance_no_fake_turn.py  test_remote_message.py  test_scheduler.py  test_server.py  test_speech_events.py  (+7 more)
libraries/python/tests/integration/: test_evals_integration.py  test_pipeline_e2e.py  test_telnyx_call_control.py  test_telnyx_convai.py  test_telnyx_pipeline.py  test_telnyx_realtime.py  test_twilio_convai.py  test_twilio_pipeline.py  test_twilio_realtime.py
libraries/python/tests/security/: test_security.py
libraries/python/tests/soak/: conftest.py  test_soak.py
libraries/python/tests/unit/: test_aec.py  test_anthropic_caching.py  test_assemblyai_stt_buffering.py  test_background_audio.py  test_barge_in_two_stage.py  test_before_send_to_stt_hook.py  test_call_log.py  test_call_wait.py  test_cartesia_telephony.py  test_cerebras_llm.py  test_chat_context.py  test_circuit_breaker.py  test_client_unit.py  test_dashboard_persistence_unit.py  test_dashboard_store_unit.py  test_deepfilternet_filter.py  test_elevenlabs_convai_telephony.py  test_elevenlabs_telephony.py  test_elevenlabs_ws_tts.py  test_exceptions_unit.py  test_fallback_provider.py  test_inworld_tts.py  test_krisp_filter.py  test_llm_api.py  test_llm_error_fallback.py  test_llm_loop_unit.py  test_metrics_store_hydrate.py  test_metrics_turn_rearm.py  test_metrics_unit.py  test_models_unit.py  test_new_api_python.py  test_new_client_api.py  test_parity_ports.py  (+25 more)
(+357 files in other folders)
